NAS-119477: Fixed text wrap

--- a/src/app/pages/storage/modules/pool-manager/components/manual-selection-vdev/manual-selection-vdev.component.scss
+++ b/src/app/pages/storage/modules/pool-manager/components/manual-selection-vdev/manual-selection-vdev.component.scss
@@ -34,8 +34,5 @@ p {
 }
 
 .type-container {
-  h2,
-  p {
-    width: 155px;
-  }
+  white-space: nowrap;
 }
